--- a/src/main/resources/templates/user/home.html
+++ b/src/main/resources/templates/user/home.html
@@ -8,7 +8,7 @@
 <section layout:fragment="content">
     <div class="row">
         <th:block th:insert="fragments/menu-fragment :: menu" />
-        <div class="col-md-10 mt-3">
+        <div class="col-md-9 col-lg-10 mt-3">
             <div class="row">
                 <div class="col-8"><h1>Welcome to Latter Day Ward</h1></div>
                 <div class="col">
