--- a/src/main/resources/templates/main/master.html
+++ b/src/main/resources/templates/main/master.html
@@ -10,32 +10,45 @@
 
     <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,300i,700" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i" rel="stylesheet" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link th:href="@{/css/addins.css}" rel="stylesheet" />
+    <link th:href="@{/css/main.css}" rel="stylesheet" />
     <link rel="icon" type="image/png" th:href="@{/images/favicon.ico}" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.min.js" integrity="sha512-STof4xm1wgkfm7heWqFJVn58Hm3EtS31XFaagaa8VMReCXAkQnJZ+jEy8PCC/iT18dFy95WcExNHFTqLyp72eQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     <script th:src="@{/script/addins.js}"></script>
     <script th:if="${session.user != null && session.user.admin}" th:src="@{/script/admin/script.js}"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="d-flex flex-column">
-    <nav class="navbar navbar-expand-md bg-secondary border-bottom border-warning border-3">
-        <div class="container">
-            <a class="navbar-brand text-light" href="/user/home">
-                <img th:src="@{/images/favicon.ico}" alt="" width="32" class="d-inline-block align-text-top">
-                Latter Day Ward
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <a class="btn btn-secondary text-light" th:href=@{/oauth/logout} th:if="${session.user != null}">LOGOUT</a>
+<body th:with="user=${session.user}">
+    <header>
+        <div class="bg-gray-500 border-b-4 border-b-yellow-400 grid grid-cols-3 md:grid-cols-2 py-3 px-5 md:px-10">
+            <div class="md:col-span-1 col-span-2">
+                <img th:src="@{/images/favicon.ico}" alt="" width="32" class="inline">
+                <span class="pl-3 text-white text-xl align-middle">Latter Day Ward</span>
+            </div>
+            <div th:if="${user != null}" class="text-right">
+                <a class="align-middle text-white" th:href="@{/oauth/logout}">LOGOUT</a>
+            </div>
         </div>
-    </nav>
-    <th:block th:if="${messages}">
-        <div class="container" th:insert="fragments/message-fragment :: messages" />
-    </th:block>
+    </header>
 
-    <section class="container flex-grow-1" layout:fragment="content" />
+    <div th:class="${user != null ? 'grid grid-cols-12 gap-0 md:gap-4 mb-20' : ''}">
+        <th:block th:insert="fragments/menu-fragment :: menu" th:if="${user != null}" />
+        <div class="col-span-12 md:col-span-9 mx-5">
+            <th:block th:if="${messages}">
+                <div class="container" th:insert="fragments/message-fragment :: messages" />
+            </th:block>
+            <section layout:fragment="content" />
+        </div>
+    </div>
+
+    <footer class="bg-gray-200 border-t-4 border-t-yellow-400 mt-10 fixed bottom-0 right-0 left-0">
+        <div class="grid grid-cols-1 content-center py-3 px-5 md:px-10 h-16">
+            <div class="text-center text-sm text-gray-400">
+                This is not an official website of
+                <a class="underline text-blue-500" href="https://churchofjesuschrist.org">The Church of Jesus Christ of Latter-day Saints.</a>
+                It is operated by members of the Maples 6th Ward.
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
