--- a/src/main/resources/templates/user/announcement.html
+++ b/src/main/resources/templates/user/announcement.html
@@ -6,54 +6,53 @@
 <head />
 <body>
 <section layout:fragment="content">
-    <div class="row">
-        <th:block th:insert="fragments/menu-fragment :: menu" />
-        <div class="col-md-9 mt-3">
-            <h3>Ward Announcements</h3>
-            <th:block th:each="g : ${announcements}">
-                <h4><span class="badge bg-secondary" th:text="${g.key}" /></h4>
-                <ul class="list-group my-3">
-                    <li th:each="a : ${g.value}" th:class="${a.pastDue()} ? 'border border-2 border-danger list-group-item' : 'list-group-item'">
-                        <div class="row">
-                            <div class="col-md-5">
-                                <h6 th:text="${a.title}" class="fw-bold fs-5"></h6>
-                                <h6 th:if="${a.pastDue()}" class="text-danger">* Past Due</h6>
-                                <div><strong>ID: </strong> <span class="badge bg-light border text-dark" th:text="${a.id}" /></div>
-                                <div class="description fs-7 mt-2"><h6 class="fw-bold mb-0">Description: </h6><span th:text="${a.description}" /></div>
-                            </div>
-                            <div class="col-md-4">
-                                <div class="fs-7">
-                                    <strong class="fs-6">Location: </strong>
-                                    <span th:if="${!a.hasLink}" th:text="${a.location.address}" />
-                                    <span th:if="${a.hasLink}">
-                                        <i class="fa-solid fa-location-dot text-info"></i>
-                                        <a th:href="${a.location.link}" th:text="${a.location.address}"></a>
-                                    </span>
-                                </div>
-                                <h6 class="mb-0 fw-bold fs-6">Date(s): </h6>
-                                <div class="fs-7" th:each="d: ${a.dates}">
-                                    <span th:if="${d.subTitle != ''}"><strong th:text="${d.subTitle}"></strong>:</span>
-                                    <span th:text="${#temporals.format(d.date, 'MMM dd, yyyy hh:mma')}" />
-                                </div>
-                                <div class="fs-7"><strong>Announcement Type:</strong> <span th:text="${a.type}" /></div>
-                            </div>
-                            <div class="col">
-                                Active? <i th:if="${a.active}" class="text-success fa-regular fa-circle-check"></i>
-                                <i th:if="${!a.active}" class="text-danger fa-solid fa-circle-xmark"></i>
-                            </div>
-                            <div class="col-md-2 text-end">
-                                <form th:action="@{/user/announcement/delete}" method="post" class="mx-3">
-                                    <input type="hidden" name="id" th:value="${a.id}" />
-                                    <button class="bg-transparent border-0 delete_check"><i class="fa-solid fs-2 fa-trash-can text-danger"></i></button>
-                                    <button th:formaction="@{/user/announcement/edit}" class="bg-transparent border-0"><i class="fa-solid fs-2 fa-pencil text-warning"></i></button>
-                                </form>
-                            </div>
-                        </div>
-                    </li>
-                </ul>
-            </th:block>
+    <h3 class="font-bold text-3xl my-5">Ward Announcements</h3>
+    <th:block th:each="g : ${announcements}">
+        <h4 class="rounded bg-gray-200 border border-gray-600 p-1 inline" th:text="${g.key}"></h4>
+        <div th:each="a : ${g.value}"
+             th:class="${a.pastDue()} ? 'border border-red-600 flex flex-row flex-wrap my-2 p-4 rounded-lg' : 'flex flex-row my-2 border border-gray-600 flex-wrap rounded-lg p-4'">
+            <div class="basis-full md:basis-2/5">
+                <p>
+                    <b th:text="${a.title}" />
+                    <span th:if="${a.pastDue()}" class="text-red-600"> - * Past Due</span>
+                </p>
+                <p><b>ID: </b> <span class="text-sm px-1 bg-gray-200 border border-black rounded" th:text="${a.id}" /></p>
+                <p><b>Description: </b><span th:text="${#strings.abbreviate(a.description,120)}" /></p>
+            </div>
+            <div class="basis-full md:basis-2/5 md:px-7">
+                <p>
+                    <span class="font-bold">Location:</span>
+                    <span th:if="${!a.hasLink}" th:text="${a.location.address}" />
+                    <span th:if="${a.hasLink}">
+                        <i class="fa-solid fa-location-dot text-blue-400"></i>
+                        <a th:href="${a.location.link}" th:text="${a.location.address}"></a>
+                    </span>
+                </p>
+                <p>
+                    <p class="font-bold">Date(s):</p>
+                    <span th:each="d: ${a.dates}">
+                        <span th:if="${d.subTitle != ''}"><b th:text="${d.subTitle}"></b>:</span>
+                        <span th:if="${d != null}" th:text="${#temporals.format(d.date, 'MMM dd, yyyy hh:mma')}"></span>
+                        <br />
+                    </span>
+                </p>
+                <p><b>Announcement Type:</b> <span th:text="${a.type}" /></p>
+            </div>
+            <div class="basis-full md:basis-1/5">
+                <span>
+                    Active? <i th:if="${a.active}" class="text-green-600 fa-regular fa-circle-check"></i>
+                    <i th:if="${!a.active}" class="text-red-600 fa-solid fa-circle-xmark"></i>
+                </span>
+                <span>
+                    <form th:action="@{/user/announcement/delete}" method="post" class="inline float-right">
+                        <input type="hidden" name="id" th:value="${a.id}" />
+                        <button class="delete_check"><i class="fa-solid fa-trash-can text-3xl text-red-600"></i></button>
+                        <button th:formaction="@{/user/announcement/edit}"><i class="fa-solid text-3xl fa-pencil text-amber-500"></i></button>
+                    </form>
+                </span>
+            </div>
         </div>
-    </div>
+    </th:block>
 </section>
 </body>
 </html>
