--- a/src/main/resources/templates/user/announcement_add.html
+++ b/src/main/resources/templates/user/announcement_add.html
@@ -8,83 +8,77 @@
 </head>
 <body>
 <section layout:fragment="content">
-    <div class="row">
-        <th:block th:insert="fragments/menu-fragment :: menu" />
-        <div class="col-md-9 mt-3">
-            <h3>Add an Announcement</h3>
+    <div class="grid grid-cols-10 gap-4">
+        <div class="col-span-10">
+            <h3 class="font-bold text-3xl my-4">Add an Announcement</h3>
             <form th:action="@{/user/announcement/save}" method="post" th:object="${announcement}">
-                <input type="hidden" th:field="*{id}" th:if="${announcement.id != null}"/>
-                <input type="hidden" name="wardPath" th:value="${session.user.ward.path}" />
-                <div class="row mb-3">
-                    <div class="col-md-6">
+                <div class="grid grid-cols-12 gap-4">
+                    <div class="col-span-12 md:col-span-6">
+                        <input type="hidden" th:field="*{id}" th:if="${announcement.id != null}"/>
+                        <input type="hidden" name="wardPath" th:value="${session.user.ward.path}" />
                         <label class="form-label" for="title">Title</label>
-                        <input class="form-control" type="text" th:field="*{title}" id="title"/>
+                        <input class="rounded block w-10/12" type="text" th:field="*{title}" id="title"/>
                     </div>
-                </div>
-                <div class="row mb-3">
-                    <div class="col">
+                    <div class="col-span-12">
                         <label class="form-label" for="description">Description</label>
-                        <textarea class="form-control" type="text" th:field="*{description}" id="description"></textarea>
+                        <textarea class="rounded block w-10/12" type="text" th:field="*{description}" id="description"></textarea>
                     </div>
-                </div>
-                <div class="row mb-3">
-                    <dive class="col-md-6">
+                    <div class="col-span-12 md:col-span-6">
                         <label class="form-label" for="address">Address Location</label>
-                        <input class="form-control" type="text" th:field="*{location.address}" id="address" />
-                    </dive>
-                    <dive class="col-md-6">
+                        <input class="rounded block w-10/12" type="text" th:field="*{location.address}" id="address" />
+                    </div>
+                    <div class="col-span-12 md:col-span-6">
                         <label class="form-label" for="link">Address Link</label>
-                        <input class="form-control" type="text" th:field="*{location.link}" id="link"/>
-                    </dive>
-                </div>
-                <div class="row">
-                    <div class="col-md-6">
-                        <h5>Dates
+                        <input class="rounded block w-10/12" type="text" th:field="*{location.link}" id="link"/>
+                    </div>
+                    <div class="col-span-12 mt-4">
+                        <h5 class="text-lg font-bold">Dates
                             <a title="Add a Date" type="button" class="duplicate-input" data-target=".date-set" data-appender="#dates">
-                                <i class="fa-solid fa-circle-plus text-info"></i>
+                                <i class="fa-solid fa-circle-plus text-blue-400"></i>
                             </a>
                         </h5>
                     </div>
                 </div>
                 <div id="dates">
-                    <div class="row mb-3 date-set" th:each="d, i : *{dates}" th:data-item-id="${'date'+i.index}">
-                        <div class="col-md-6">
-                            <label class="form-label" th:for="${'dates['+ i.index +'].date'}">Date/Time</label>
-                            <input class="form-control" type="datetime-local"
+                    <div class="grid grid-cols-12 mb-3 date-set" th:each="d, i : *{dates}" th:data-item-id="${'date'+i.index}" >
+                        <div class="col-span-12 md:col-span-6">
+                            <label th:for="${'dates['+ i.index +'].date'}">Date/Time</label>
+                            <input class="rounded block w-10/12" type="datetime-local"
                                    th:name="${'dates['+ i.index +'].date'}"
                                    th:value="${d.date != null ? announcement.thymeleafDateTime(d.date) : ''}"
                                    th:id="${'dates['+ i.index +'].date'}" />
                         </div>
-                        <div class="col-md-5">
-                            <label class="form-label" th:for="${'dates['+ i.index +'].subTitle'}">SubTitle</label>
-                            <input class="form-control" type="text"
+                        <div class="col-span-12 md:col-span-6">
+                            <label th:for="${'dates['+ i.index +'].subTitle'}">SubTitle</label><br />
+                            <input class="rounded w-10/12" type="text"
                                    th:name="${'dates['+ i.index +'].subTitle'}"
                                    th:value="${d.subTitle}"
                                    th:id="${'dates['+ i.index +'].subTitle'}" />
-                        </div>
-                        <div th:class="${i.index > 0 ? 'col-md-1 d-flex align-items-end' : 'd-none'}">
-                            <button type="button" class="bg-transparent border-0 delete_item" th:data-item-target="${'date'+i.index}">
-                                <i class="fa-solid fs-4 fa-trash-can text-danger"></i>
-                            </button>
+
+                            <div th:class="${i.index > 0 ? 'inline' : 'hidden'}">
+                                <button type="button" class="delete_item" th:data-item-target="${'date'+i.index}">
+                                    <i class="fa-solid fs-4 fa-trash-can text-red-600 text-2xl"></i>
+                                </button>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="row mb-3">
-                    <div class="col-md-6">
-                        <label class="form-label" for="type">Type</label>
-                        <input class="form-control" type="text" th:field="*{type}" id="type"/>
-                        <div class="form-text">
+
+                <div class="grid grid-cols-12">
+                    <div class="col-span-12">
+                        <label for="type">Type</label>
+                        <input class="rounded block" type="text" th:field="*{type}" id="type"/>
+                        <small class="mute">
                             You can group announcements together by giving them the same type.
-                        </div>
+                        </small>
+                    </div>
+
+                    <div class="col-span-12 my-4">
+                        <label for="active">Active?</label>
+                        <input class="rounded" type="checkbox" th:field="*{active}" id="active"/>
                     </div>
                 </div>
-                <div class="row mb-3">
-                    <div class="col-6">
-                        <label class="form-label" for="active">Active?</label>
-                        <input class="form-check-input" type="checkbox" th:field="*{active}" id="active"/>
-                    </div>
-                </div>
-                <button type="submit" class="btn btn-primary btn-sm my-3">Save</button>
+                <button type="submit" class="rounded border-blue-600 bg-blue-400 border py-2 px-3">Save</button>
             </form>
         </div>
     </div>
