--- a/src/main/resources/templates/user/datacard.html
+++ b/src/main/resources/templates/user/datacard.html
@@ -6,52 +6,46 @@
 <head />
 <body>
 <section layout:fragment="content">
-    <div class="row">
-        <th:block th:insert="fragments/menu-fragment :: menu" />
-        <div class="col-md-9 mt-3">
-            <h3>Data Cards</h3>
-            <div class="my-4" th:each="m, i: ${datacards}" th:with="color=${colors.nextColor(i.index)}">
+    <div class="grid grid-cols-12 gap-4">
+        <div class="col-span-12">
+            <h3 class="font-bold text-3xl my-4">Data Cards</h3>
+            <div th:each="m, i: ${datacards}" th:with="color=${colors.nextColor(i.index)}" class="my-4">
                 <h4>
-                    <span th:class="${'badge bg-opacity-50 text-bg-' + color}" th:text="${m.key}" />
-                    <a th:href="@{/user/datacard/order/{key}(key=${m.key})}" title="Order Cards">
-                        <span class="badge text-bg-secondary"><i class="fa-solid fa-arrow-down-short-wide"></i></span>
+                    <span th:class="${'rounded-lg border border-'+color+'-600 text-'+color+'-800 bg-'+color+'-200 px-2 py-1'}" th:text="${m.key}" />
+                    <a class="px-2 py-1 rounded-lg text-white bg-gray-400 border border-gray-600" th:href="@{/user/datacard/order/{key}(key=${m.key})}" title="Order Cards">
+                        <i class="fa-solid fa-arrow-down-short-wide"></i>
                     </a>
                 </h4>
-                <div class="row">
-                    <div class="col-md-12 my-2" th:each="c : ${m.value}">
-                        <div th:class="${'border border-opacity-50 border-2 border-' + color + ' card'}">
-                            <div class="card-header">
-                                <div class="d-flex felx-row justify-content-between">
-                                    <div class="d-inline-flex">
-                                        <span class="fw-bold" th:text="${c.title}"/>
-                                        <div class="form-check form-switch ms-4">
-                                            <input class="form-check-input toggle-active" type="checkbox" role="switch" id="activate" th:data-card-id="${c.id}" th:checked="${c.active}">
-                                            <label class="form-check-label" for="activate">Active</label>
-                                        </div>
-                                    </div>
-                                    <div>
-                                        <form th:action="@{/user/datacard/delete}" method="post" class="d-inline">
-                                            <input type="hidden" name="id" th:value="${c.id}" />
-                                            <button class="bg-transparent border-0 delete_check"><i class="fa-solid fs-4 fa-trash-can text-danger"></i></button>
-                                            <button th:formaction="@{/user/datacard/edit}" class="bg-transparent border-0"><i class="fa-solid fs-4 fa-pencil text-warning"></i></button>
-                                        </form>
-                                    </div>
-                                </div>
+                <div th:each="c : ${m.value}" th:class="${'rounded-lg border border-'+color+'-600 card grid grid-cols-12 my-4'}">
+                    <div class="col-span-12">
+                        <div class="border rounded-t-lg border-b-gray-600 bg-gray-100 px-3 py-4 flex flex-row">
+                            <div class="basis-2/5 text-xl">
+                                <span class="basis-1/3 font-bold" th:text="${c.title}"/>
+                                <input class="toggle-active ml-8" type="checkbox" role="switch" id="activate" th:data-card-id="${c.id}" th:checked="${c.active}">
+                                <label class="text-sm" for="activate">Active</label>
                             </div>
-                            <div class="card-body">
-                                <div class="d-flex justify-content-between">
-                                    <h5 class="card-title" th:text="${c.subtitle}"></h5>
-                                    <span><strong>ID: </strong> <span class="badge bg-light border text-dark" th:text="${c.id}" /></span>
-                                </div>
-                                <div class="d-flex flex-row">
-                                    <div th:if="${c.hasImage()}" class="me-3">
-                                        <img th:each="i : ${c.images}" th:src="${i.src}" th:alt="${i.alt}" width="75" height="75" />
-                                    </div>
-                                    <div class="card-text">
-                                        <div th:text="${c.paragraph}"></div>
-                                    </div>
-                                </div>
+                            <div class="basis-3/5 text-right">
+                                <form th:action="@{/user/datacard/delete}" method="post">
+                                    <input type="hidden" name="id" th:value="${c.id}" />
+                                    <button class="delete_check mx-3"><i class="fa-solid fa-trash-can text-red-600 text-2xl"></i></button>
+                                    <button th:formaction="@{/user/datacard/edit}" class="ml-3"><i class="fa-solid fa-pencil text-amber-400 text-2xl"></i></button>
+                                </form>
                             </div>
+                        </div>
+                    </div>
+                    <div class="col-span-12 px-3 py-4">
+                        <h5 class="card-title" th:text="${c.subtitle}"></h5>
+                        <span>
+                            <strong>ID: </strong>
+                            <span class="border border-gray-600 bg-gray-200 px-1 rounded" th:text="${c.id}" />
+                        </span>
+
+                        <div th:if="${c.hasImage()}" class="float-right">
+                            <img class="inline" th:each="i : ${c.images}" th:src="${i.src}" th:alt="${i.alt}" width="75" height="75" />
+                        </div>
+
+                        <div class="card-text">
+                            <div th:text="${c.paragraph}"></div>
                         </div>
                     </div>
                 </div>
