--- a/src/main/resources/templates/user/datacard_order.html
+++ b/src/main/resources/templates/user/datacard_order.html
@@ -6,17 +6,16 @@
 <head />
 <body>
 <section layout:fragment="content">
-    <div class="row">
-        <th:block th:insert="fragments/menu-fragment :: menu" />
-        <div class="col-md-9 mt-3">
-            <h3 class="fs-2">Data Card Order</h3>
+    <div class="grid grid-cols-12">
+        <div class="col-span-12">
+            <h3 class="font-bold text-3xl my-4">Data Card Order</h3>
             <form th:action="@{/user/datacard/order/{type}/save(type=${cardType})}" method="post">
-                <div class="row mb-3">
-                    <div class="col-4 fs-3 bg-warning">Card Name</div>
-                    <div class="col-2 fs-3 bg-warning">Card Order</div>
+                <div class="grid grid-cols-12 w-full md:w-1/2 bg-amber-100 p-2 rounded-t border border-amber-300">
+                    <div class="col-span-6">Card Name</div>
+                    <div class="col-span-6">Card Order</div>
                 </div>
-                <div class="row" th:each="d, i: ${datacards}">
-                    <div class="col-4">
+                <div class="grid grid-cols-12 w-full md:w-1/2 p-2 border border-x-1 border-t-0" th:each="d, i: ${datacards}">
+                    <div class="col-span-6">
                         <h5 th:text="${d.title}"></h5>
                         <input type="hidden" th:name="${'datacards['+i.index+'].id'}" th:value="${d.id}" />
                         <input type="hidden" th:name="${'datacards['+i.index+'].wardPath'}" th:value="${d.wardPath}" />
@@ -30,7 +29,8 @@
                             <input type="hidden" th:name="${'datacards['+i.index+'].images['+imgIdx.index+'].width'}" th:value="${img.width}" />
                             <input type="hidden" th:name="${'datacards['+i.index+'].images['+imgIdx.index+'].height'}" th:value="${img.height}" />
                         </th:block>
-
+                    </div>
+                    <div class="col-span-6">
                         <input type="hidden" th:name="${'datacards['+i.index+'].button.text'}" th:value="${d.button.text}" />
                         <th:block th:each="l, linkIdx : ${d.button.link}">
                             <input type="hidden" th:name="${'datacards['+i.index+'].button.link['+linkIdx.index+'].url'}" th:value="${l.url}" />
@@ -40,18 +40,13 @@
                         </th:block>
                         <input type="hidden" th:name="${'datacards['+i.index+'].type'}" th:value="${d.type}" />
                         <input type="hidden" th:name="${'datacards['+i.index+'].active'}" th:value="${d.active}" />
-                    </div>
-                    <div class="col-2">
-                        <select th:name="${'datacards['+i.index+'].order'}">
+                        <select class="form-select rounded" th:name="${'datacards['+i.index+'].order'}">
                             <option th:each="o, i: ${cardNumbers}" th:selected="${d.order == o}" th:text="${o}"></option>
                         </select>
+
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col">
-                        <button type="submit" class="btn btn-primary">Save</button>
-                    </div>
-                </div>
+                <button type="submit" class="border border-amber-400 bg-amber-200 py-1 px-2 my-2 rounded">Save</button>
             </form>
         </div>
     </div>
