--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -8,34 +8,33 @@
 </head>
 <body>
     <section layout:fragment="content">
-        <div class="row d-flex justify-content-center mt-5">
-            <div class="col-12 col-md-8 col-lg-6 col-xl-5">
-                <div class="card py-3 px-2">
-                    <h4 class="text-center mb-4 mt-2">LATTER DAY WARD LOGIN</h4>
-                    <div class="row mx-auto mt-2">
-                        <h6>LOGIN WITH</h6>
+        <div class="grid grid-cols-12 mt-10 border-4 w-full md:w-1/3 mx-auto py-8 rounded-lg">
+            <div class="col-span-12 text-center">
+                <h4 class="pb-3 font-bold text-xl">LATTER DAY WARD LOGIN</h4>
+                <div class="pb-6">
+                    <h6>LOGIN WITH</h6>
+                </div>
+                <div class="flex flex-row flex-wrap text-center">
+                    <div class="basis-1/3">
+                        <a class="bg-red-600 rounded-lg px-5 py-6 text-white border border-black" th:href="@{/oauth2/authorization/{name}(name='google')}">
+                            <i class="fab fa-google text-4xl align-middle pb-1.5"></i>
+                        </a>
+                        <h5 class="mt-5 font-bold">Google</h5>
                     </div>
-                    <div class="row mx-auto text-center">
-                        <div class="col-md-4">
-                            <a class="google btn btn-lg px-4 mx-3" th:href="@{/oauth2/authorization/{name}(name='google')}">
-                                <i class="fab fa-google"></i>
-                            </a>
-                            <h5>Google</h5>
-                        </div>
-                        <div class="col-md-4">
-                            <a class="github btn btn-lg px-4 mx-3" th:href="@{/oauth2/authorization/{name}(name='github')}">
-                                <i class="fab fa-github"></i>
-                            </a>
-                            <h5>GitHub</h5>
-                        </div>
-                        <div class="col-md-4">
-                            <a class="facebook btn btn-lg px-4 mx-3" th:href="@{/oauth2/authorization/{name}(name='facebook')}">
-                                <i class="fab fa-facebook"></i>
-                            </a>
-                            <h5>Facebook</h5>
-                        </div>
+                    <div class="basis-1/3">
+                        <a class="bg-black rounded-lg px-5 py-6 text-white border border-black" th:href="@{/oauth2/authorization/{name}(name='github')}">
+                            <i class="fab fa-github text-4xl align-middle pb-1.5"></i>
+                        </a>
+                        <h5 class="mt-5 font-bold">GitHub</h5>
+                    </div>
+                    <div class="basis-1/3">
+                        <a class="bg-blue-600 rounded-lg px-5 py-6 text-white border border-black" th:href="@{/oauth2/authorization/{name}(name='facebook')}">
+                            <i class="fab fa-facebook text-4xl align-middle pb-1.5"></i>
+                        </a>
+                        <h5 class="mt-5 font-bold">Facebook</h5>
                     </div>
                 </div>
+
             </div>
         </div>
     </section>
