--- a/src/main/resources/templates/user/token.html
+++ b/src/main/resources/templates/user/token.html
@@ -6,43 +6,34 @@
 <head />
 <body>
 <section layout:fragment="content">
-    <div class="row">
-        <th:block th:insert="fragments/menu-fragment :: menu" />
-        <div class="col-md-9 mt-3">
-            <h3>API Token</h3>
+    <div class="grid grid-cols-10 gap-4">
+        <!--/*@thymesVar id="token" type="my.latterdayward.data.ApiToken"*/-->
+        <div class="col-span-10">
+            <h3 class="font-bold text-3xl my-4">API Token</h3>
             <form th:action="@{/user/token/create}" method="post" th:object="${token}">
-                <div class="row">
-                    <div class="col-md-12" th:if="${!token.hasToken && session.user.hasWard}">
-                        <button type="submit" class="btn btn-lg btn-warning border border-dark">Generate Token</button>
-                    </div>
-                    <div class="col-md-12 pt-3" th:if="${token.hasToken}">
-                        <p>Note: Only one token can be generated at a time. Delete the current token first if you need a different token. </p>
-                    </div>
+                <div th:if="${!token.hasToken && session.user.hasWard}">
+                    <button type="submit" class="px-4 py-2 bg-amber-400 border-amber-600 border rounded-lg hover:bg-amber-300">Generate Token</button>
+                </div>
+                <div th:if="${token.hasToken}" class="my-4">
+                    <p>Note: Only one token can be generated at a time. Delete the current token first if you need a different token. </p>
                 </div>
             </form>
-            <div class="row mt-3" th:if="${token.hasToken}">
-                <div class="col-md-6">
-                    <div class="form-group">
-                        <label>API Token</label>
-                        <div class="input-group" id="show_hide_token">
-                            <input class="form-control" type="password" th:value="${token.token}">
-                            <div class="input-group-text">
-                                <a href=""><i class="fa fa-eye-slash" aria-hidden="true"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    Expires:
-                    <span th:text="${#temporals.format(token.expires, 'MMM dd, yyyy hh:mma')}"></span>
-                    <p th:class="${token.isExpired} ? 'btn btn-danger btn-sm' : 'btn btn-warning btn-sm'" th:text="${token.timePeriod()}"></p>
-                </div>
-                <div class="col-md-1 align-bottom">
-                    <form th:action="@{/user/token/delete}" method="post">
-                        <button class="bg-transparent border-0" type="submit" id="token_delete" title="Delete Token"><i class="fa-solid fa-trash-can fs-2 text-danger"></i></button>
-                    </form>
-                </div>
+        </div>
+        <div class="col-span-10 md:col-span-5" th:if="${token.hasToken}">
+            <label>API Token</label>
+            <div id="show_hide_token">
+                <input class="rounded w-10/12" type="password" th:value="${token.token}" />
+                <a class="my-2" href=""><i class="fa fa-eye-slash" aria-hidden="true"></i></a>
             </div>
+        </div>
+        <div class="col-span-10 md:col-span-5" th:if="${token.hasToken()}">
+            <p>Expires: <span th:text="${#temporals.format(token.expires, 'MMM dd, yyyy hh:mma')}"></span></p>
+            <p th:class="${token.expired} ? 'px-4 py-2 bg-red-200 rounded border-red-400 inline border border-red-600' : 'px-4 py-2 bg-green-200 rounded border-green-400 inline border border-green-600'"
+               th:text="${token.timePeriod()}"></p>
+            <form th:action="@{/user/token/delete}" method="post" class="inline">
+                <button type="submit" id="token_delete" title="Delete Token" class="align-middle ml-4 mb-1">
+                    <i class="fa-solid fa-trash-can text-red-600 text-3xl"></i></button>
+            </form>
         </div>
     </div>
 </section>
